--- a/index.html
+++ b/index.html
@@ -18,47 +18,6 @@
             line-height: 1.6;
         }
 
-        /* Header */
-        header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            padding: 15px 25px;
-            background: rgba(255, 255, 255, 0.9);
-            backdrop-filter: blur(10px);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            z-index: 1000;
-        }
-
-        header .logo {
-            font-size: 20px;
-            font-weight: bold;
-            color: #333;
-        }
-
-        header nav ul {
-            list-style: none;
-            display: flex;
-        }
-
-        header nav ul li {
-            margin-left: 20px;
-        }
-
-        header nav ul li a {
-            text-decoration: none;
-            color: #666;
-            font-weight: 500;
-            transition: color 0.3s;
-        }
-
-        header nav ul li a:hover {
-            color: #87ceeb;
-            border-bottom: 2px solid #87ceeb;
-        }
-
         /* Hero Section */
         .hero {
             height: 100vh;
@@ -179,28 +138,6 @@
 
         /* Mobile Optimization */
         @media (max-width: 768px) {
-            /* Header */
-            header {
-                padding: 10px 15px;
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            header .logo {
-                font-size: 18px;
-            }
-
-            header nav ul {
-                flex-direction: column;
-                width: 100%;
-                margin-top: 10px;
-            }
-
-            header nav ul li {
-                margin: 8px 0;
-                text-align: center;
-            }
-
             /* Hero Section */
             .hero {
                 height: 70vh;
@@ -234,7 +171,7 @@
             }
 
             .card iframe {
-                height: 180px; /* Slightly smaller for mobile */
+                height: 180px;
             }
 
             .card h3 {
@@ -261,7 +198,6 @@
         }
 
         @media (max-width: 480px) {
-            /* Further adjustments for very small screens */
             .hero h1 {
                 font-size: 28px;
             }
@@ -281,20 +217,6 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <div class="logo">Bidrah</div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Vlog</a></li>
-                <li><a href="#">Tools</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
     <!-- Hero Section -->
     <section class="hero">
         <h1>Welcome to Bidrah</h1>
